# QNPy

./: LICENCE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
QNPy/: CNP_ARCHITECTURE.py  CNP_DATASETCLASS.py  CNP_METRICS.py  PREDICTION.py  PREDICTION_Original_mjd.py  PREDICTION_onePDF.py  PREDICTION_onePDF_original_mjd.py  Preprocess.py  SPLITTING_AND_TRAINING.py
Tutorial/: 01-Preprocess_tutorial.ipynb  02-Splitting_and_training_tutorial.ipynb  06-PREDICTION_onePDF_original_mjd_tutorial.ipynb  Prediction_Original_mjd_tutorial.ipynb  Prediction_onePDF_tutorial.ipynb  Prediction_tutorial.ipynb
Tutorial/Light_curves/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
