[metadata]
name = QNPy
version = 0.0.1
author = Marina Pavlovic
author_email = marinapavlovic5812@gmail.com
description = Modeling Quasar time series with Neural processes in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kittytheastronaut/QNPy
classifiers = 
    programing language :: Python :: 3
    licence :: OSI Approved :: MIT licence
    Operating System :: OS independent

[options]

python_requires = >=3.7
include_package_data = True 